@@ -186,6 +186,12 @@ typedef struct {
 	 * Used to free the copied strings reliably even if they are removed
 	 * from argv. */
 	char **shadows;
+	 /* Hash table (pointer (not string) -> utf8 flag) so we can completely
+	  * restore PVs from the strings.  We cannot simply use an array of
+	  * utf8 flags because strings might be removed from argv, in which
+	  * case we wouldn't know which entry in the utf8 flag array
+	  * corresponds to which string. */
+	GHashTable *utf8_flags;
 } GPerlArgvPriv;
 
 =item GPerlArgv * gperl_argv_new ()
@@ -238,6 +244,7 @@ gperl_argv_new ()
 
 	priv = g_new (GPerlArgvPriv, 1);
 	priv->shadows = g_new0 (char*, pargv->argc);
+	priv->utf8_flags = g_hash_table_new (NULL, NULL);
 	pargv->priv = priv;
 
 	pargv->argv[0] = SvPV_nolen (ARGV0);
@@ -246,8 +253,12 @@ gperl_argv_new ()
 		SV ** svp = av_fetch (ARGV, i, 0);
 		if (svp && gperl_sv_is_defined (*svp)) {
 			const char *arg = SvPV_nolen (*svp);
+			gboolean utf8_flag = !!SvUTF8 (*svp);
 			priv->shadows[i] = pargv->argv[i+1]
 			                 = g_strdup (arg);
+			g_hash_table_insert (priv->utf8_flags,
+			                     pargv->argv[i+1],
+			                     GINT_TO_POINTER (utf8_flag));
 		}
 	}
 
@@ -273,7 +284,10 @@ gperl_argv_update (GPerlArgv *pargv)
 	for (i = 1 ; i < pargv->argc ; i++) {
 		SV *sv;
 		const char *arg = pargv->argv[i];
+		gboolean utf8_flag = !!g_hash_table_lookup (priv->utf8_flags, arg);
 		sv = newSVpv (arg, PL_na);
+		if (utf8_flag)
+			SvUTF8_on (sv);
 		av_push (ARGV, sv);
 	}
 }
@@ -288,6 +302,7 @@ gperl_argv_free (GPerlArgv *pargv)
 {
 	GPerlArgvPriv *priv = pargv->priv;
 	g_strfreev (priv->shadows);
+	g_hash_table_destroy (priv->utf8_flags);
 	g_free (pargv->priv);
 	g_free (pargv->argv);
 	g_free (pargv);
